POFIM-39: Mulighet for saksbehandler å sende beskjed til arbeidsgiver… (#6942)
POFIM-39: Mulighet for saksbehandler å sende beskjed til arbeidsgiver på Min side - arbeidsgiver i 5085 aksjonspunkt